# base64id-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  VISION.md
.github/workflows/: rust-publish.yml  rust-validate.yml
base64id-core/: Cargo.toml  README.md
base64id-core/benches/: id64.rs
base64id-core/src/: base64.rs  error.rs  lib.rs
base64id-core/tests/: derive.rs  rand.rs  serde.rs  sqlx.rs
base64id-derive/: Cargo.toml  LICENSE-MIT  README.md
base64id-derive/src/: lib.rs
base64id-derive/tests/: derive.rs
benches/: id64.rs
docs/: MIGRATION.0.4.md  MIGRATION.1.0.md
examples/: random_sample.rs
examples/github/: usage_1.rs  usage_2.rs  usage_rand.rs  usage_serde.rs  usage_sqlx.rs
examples/readme/: 1_usage.rs  2_encoding.rs  3_decoding.rs  4_serde.rs
src/: base64.rs  error.rs  lib.rs  rand.rs  serde.rs  tests.rs
tests/: derive.rs  error.rs  rand.rs  serde.rs  sqlx.rs
