[workspace]
members = [
    "base64id-core",
    "base64id-derive",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
authors = ["Shaun Priestley <shaun@cksm.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shauncksm/base64id-rs"
homepage = "https://base64id.cksm.cc"
categories = ["data-structures", "encoding", "web-programming", "no-std", "value-formatting"]
keywords = ["base64", "base64url"]

[package]
name = "base64id"
readme = "README.md"
description = "Efficiently represent 64, 32 and 16 bit integers as base64url strings"
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[features]
derive = ["dep:base64id-derive"]
rand = ["dep:rand"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx", "std"]
std = []

[dependencies]
rand = { version = "0.8.5", optional = true, default-features = false}
serde = { version = "1.0.145", optional = true, default-features = false }
sqlx = { version = "0.7.1", optional = true, default-features = false, features = [ "macros" ] }
base64id-derive = { version = "0.3.1", optional = true, path = "base64id-derive" }

[[example]]
name = "github_usage_1"
path = "examples/github/usage_1.rs"

[[example]]
name = "github_usage_2"
path = "examples/github/usage_2.rs"

[[example]]
name = "github_usage_rand"
path = "examples/github/usage_rand.rs"
required-features = ["rand"]

[[example]]
name = "github_usage_serde"
path = "examples/github/usage_serde.rs"
required-features = ["serde"]

[[example]]
name = "github_usage_sqlx"
path = "examples/github/usage_sqlx.rs"
required-features = ["sqlx"]

[package.metadata.docs.rs]
all-features = true