[workspace]
members = [
    "base64id-core",
    "base64id-derive",
]

[workspace.package]
version = "0.4.0-alpha.0"
edition = "2021"
authors = ["Shaun Priestley <shaun@cksm.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/shauncksm/base64id-rs"
homepage = "https://base64id.cksm.cc"
categories = ["data-structures", "encoding", "web-programming", "no-std", "value-formatting"]
keywords = ["base64", "base64url"]

[workspace.dependencies]
base64id-core = { version = "=0.4.0-alpha.0", path = "base64id-core" }
base64id-derive = { version = "=0.4.0-alpha.0", path = "base64id-derive" }

[package]
name = "base64id"
readme = "README.md"
description = "Efficiently represent 64, 32 and 16 bit integers as base64url strings"
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[features]
std = ["base64id-core/std"]

[dependencies]
base64id-core = { workspace = true }
base64id-derive = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
serde = "1.0.145"
serde_json = "1.0.85"

[[example]]
name = "readme_1_usage"
path = "examples/readme/1_usage.rs"

[[example]]
name = "readme_2_encoding"
path = "examples/readme/2_encoding.rs"

[[example]]
name = "readme_3_decoding"
path = "examples/readme/3_decoding.rs"

[[example]]
name = "readme_4_serde"
path = "examples/readme/4_serde.rs"

[package.metadata.docs.rs]
all-features = true