[package]
name = "base64id-core"
readme = "README.md"
description = "Efficiently represent 64, 32 and 16 bit integers as base64url strings"
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[features]
serde = ["dep:serde"]
std = []

[dependencies]
serde = { version = "1.0.145", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.3.6", features = [ "html_reports" ] }
serde = { version = "1.0.145", features = [ "derive" ] }
serde_json = "1.0.85"

[[bench]]
name = "id64"
harness = false