[package]
name = "base64id-core"
readme = "README.md"
description = "Efficiently represent 64, 32 and 16 bit integers as base64url strings"
authors.workspace = true
edition.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
version.workspace = true

[dev-dependencies]
criterion = { version = "0.3.6", features = [ "html_reports" ] }

[[bench]]
name = "id64"
harness = false